# latex-diff-viewer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  THIRD-PARTY-NOTICES.md  action.yml  difftool.example.toml  pyproject.toml
.github/workflows/: docker-publish.yml  issue-diff.yml  pages.yml  pr-diff.yml  selftest.yml  store-seed.yml
docs/: plan-ldv-overleaf.md
examples/: consumer.yml  issue-diff.yml
src/latexdiff_viewer/: __init__.py  cli.py  config.py  core.py  diff_bookmarks.py  index.html  overleaf.py  pages.py  server.py  share.py  store.py  workspace.py
tests/: mock_overleaf.py
tests/sample-project/: difftool.toml  latexmkrc  main.tex
